--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Library and sample webserver to control Magic Home LED controllers",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.16.2"
   }
